# satellite-anomaly-flood-fill

./: .gitignore  Cargo.toml  README.md
.copilot/: config.json
.github/: CONTRIBUTING.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
docs/: project_plan.md
scripts/: build.sh  test.sh
src/anomaly_map/: Cargo.toml
src/anomaly_map/src/: lib.rs
src/decisions/: Cargo.toml
src/decisions/src/: lib.rs
src/features/: Cargo.toml
src/features/src/: lib.rs
src/flight_app/: Cargo.toml
src/flight_app/src/: main.rs
src/floodfill_core/: Cargo.toml
src/floodfill_core/src/: lib.rs
src/sim_host/: Cargo.toml
src/sim_host/src/: main.rs
tests/: integration_test.rs
