[package]
name = "anomaly_map"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Data structures and utilities for satellite anomaly grid representations"

[features]
default = ["std"]
std = ["serde/std"]
no_std = []

[dependencies]
heapless.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
serde_json = "1.0"
