[package]
name = "features"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []
no_std = ["heapless"]

[dependencies]
floodfill_core = { path = "../floodfill_core" }
anomaly_map = { path = "../anomaly_map" }
heapless = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1.0"
