[package]
name = "floodfill_core"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []
no_std = ["heapless", "embedded-time"]

[dependencies]
heapless = { workspace = true, optional = true }
embedded-time = { version = "0.12", optional = true }

[dev-dependencies]
criterion = "0.4"
proptest = "1.0"
