[package]
name = "sim_host"
version = "0.1.0"
edition = "2021"
authors = ["Satellite FDIR Team"]
description = "Host simulation and testing for satellite anomaly detection"
license = "MIT"
keywords = ["satellite", "simulation", "testing", "fdir"]
categories = ["aerospace", "simulation"]

[[bin]]
name = "sim_host"
path = "src/main.rs"

[dependencies]
anomaly_map = { path = "../anomaly_map", features = ["std"] }
floodfill_core = { path = "../floodfill_core" }
features = { path = "../features", features = ["std"] }
decisions = { path = "../decisions" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
anyhow = "1.0"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"
